@@ -168,7 +168,7 @@ var lmsQueue = Vue.component("lms-queue", {
     <v-list-tile avatar v-bind:class="{'pq-current': index==currentIndex, 'list-active': menu.show && index==menu.index, 'drop-target': dragActive && index==dropIndex}" @dragstart="dragStart(index, $event)" @dragend="dragEnd()" @dragover="dragOver(index, $event)" @drop="drop(index, $event)" draggable @click.prevent.stop="click(item, index, $event)" slot-scope="{item, index}" key-field="key" @contextmenu.prevent="itemMenu(item, index, $event)">
      <v-list-tile-avatar v-if="artwork || item.selected" :tile="true" v-bind:class="{'radio-image': 0==item.duration}" class="lms-avatar">
       <v-icon v-if="item.selected">check_box</v-icon>
-      <img v-else :key="item.image" :src="item.image" onerror="this.src='html/images/radio.png'" loading="lazy"></img>
+      <img v-else :key="item.image" :src="item.image" onerror="this.src='html/images/cover.png'" loading="lazy"></img>
      </v-list-tile-avatar>
      <v-list-tile-content>
       <v-list-tile-title v-html="item.title"></v-list-tile-title>
@@ -186,7 +186,7 @@ var lmsQueue = Vue.component("lms-queue", {
     <v-list-tile avatar v-bind:class="{'pq-current': index==currentIndex, 'list-active': menu.show && index==menu.index, 'drop-target': dragActive && index==dropIndex}" @dragstart="dragStart(index, $event)" @dragend="dragEnd()" @dragover="dragOver(index, $event)" @drop="drop(index, $event)" draggable @click="click(item, index, $event)" slot-scope="{item, index}" key-field="key" @contextmenu.prevent="itemMenu(item, index, $event)">
      <v-list-tile-avatar v-if="artwork || item.selected" :tile="true" v-bind:class="{'radio-image': 0==item.duration}" class="lms-avatar">
       <v-icon v-if="item.selected">check_box</v-icon>
-      <img v-else :key="item.image" :src="item.image" onerror="this.src='html/images/radio.png'" loading="lazy"></img>
+      <img v-else :key="item.image" :src="item.image" onerror="this.src='html/images/cover.png'" loading="lazy"></img>
      </v-list-tile-avatar>
      <v-list-tile-content>
       <v-list-tile-title v-html="item.title"></v-list-tile-title>
@@ -203,7 +203,7 @@ var lmsQueue = Vue.component("lms-queue", {
     <v-list-tile :key="item.key" avatar v-bind:class="{'pq-current': index==currentIndex, 'list-active': menu.show && index==menu.index, 'drop-target': dragActive && index==dropIndex}" :id="'track'+index" @dragstart="dragStart(index, $event)" @dragend="dragEnd()" @dragover="dragOver(index, $event)" @drop="drop(index, $event)" draggable @click="click(item, index, $event)" class="lms-list-item" @contextmenu.prevent="itemMenu(item, index, $event)">
      <v-list-tile-avatar v-if="artwork || item.selected" :tile="true" v-bind:class="{'radio-image': 0==item.duration}" class="lms-avatar">
       <v-icon v-if="item.selected">check_box</v-icon>
-      <img v-else :key="item.image" v-lazy="item.image" onerror="this.src='html/images/radio.png'"></img>
+      <img v-else :key="item.image" v-lazy="item.image" onerror="this.src='html/images/cover.png'"></img>
      </v-list-tile-avatar>
      <v-list-tile-content>
       <v-list-tile-title v-html="item.title"></v-list-tile-title>
